@@ -1,4 +1,3 @@
-Copyright (C) 2003 Free Software Foundation, Inc.
 These images are licensed under the Creative Commons Attribution-ShareAlike 
 License, the text of which follows.  The original source of this license
 is at http://creativecommons.org/licenses/by-sa/1.0/ or you may obtain a copy
