@@ -3,7 +3,7 @@
 #
 # manage_i18n.pl: manage translation files
 #
-#    Copyright (C) 2003-2005  Free Software Foundation, Inc.
+#    Copyright (C) 2003-2005  Patrice Dumas <dumas@centre-cired.fr>,
 #
 #    This program is free software; you can redistribute it and/or modify
 #    it under the terms of the GNU General Public License as published by
